@@ -1,5 +1,6 @@
 May 14th - 	added change log
 		client loads map chunks from server
+		fixed bug where two clients connect with same client_id
 
 May 13th - 	admin commands from client to server
 		map chunk compression
